fixed header gap

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,7 @@ header {
     height: 80px;
     width: 100%;
     border-bottom: 1px solid black;
+    top: 0px;
 }
 .logo{
 display: flex;
